--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "mongoose": "^5.11.2",
     "underscore": "^1.12.0"
+  },
+  "devDependencies": {
+    "jshint": "^2.12.0"
   }
 }
