--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/chitranjanB/node-training#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "mongoose": "^5.11.2",
     "underscore": "^1.12.0"
   },
