--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "homepage": "https://github.com/chitranjanB/node-training#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^4.2.0",
     "joi": "^17.3.0",
     "mongoose": "^5.11.2",
+    "morgan": "^1.10.0",
+    "response-time": "^2.3.2",
     "underscore": "^1.12.0"
   },
   "devDependencies": {
