--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/chitranjanB/node-training#readme",
   "dependencies": {
+    "config": "^3.3.3",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
