--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/chitranjanB/node-training#readme",
   "dependencies": {
     "config": "^3.3.3",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
