--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "joi": "^17.3.0",
     "mongoose": "^5.11.2",
     "morgan": "^1.10.0",
+    "pug": "^3.0.0",
     "response-time": "^2.3.2",
     "underscore": "^1.12.0"
   },
